# simulation-processing

./: LICENSE  README.md  TODO.md
docs/: processing-queue.md
python/: README.md  canonicalize_smiles.py  canonicalize_toml_smiles.py  check_new_simulations.py  common.py  compare_smiles.py  constants.py  cpptraj_gmx_traj_manipulation.py  create_irods_ticket.py  create_preview.py  drain_process_queue.py  fetch_uploads.py  get_rmsd_rmsf.py  get_sequence_from_pdb.py  import_preprocessed.py  mol_id.py  push_sim_files.py  pyproject.toml  requirements.txt  sample_trajectory.py
python/tests/: test_canonicalize_smiles.py  test_canonicalize_toml_smiles.py
python/tests/inputs/: MDR00001245.toml
