[project]
name = "simulation-processing"
version = "0.1.0"
description = "MDRepo simulation processing"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "biopython>=1.86",
    "black>=26.1.0",
    "dateparser>=1.2.2",
    "dotenv>=0.9.9",
    "fabric>=3.2.2",
    "humanize>=4.15.0",
    "humansize>=1.0",
    "irods>=0.0.1",
    "mdanalysis>=2.10.0",
    "new-py>=0.1.3",
    "openbabel-wheel>=3.1.1.23",
    "pillow>=12.1.0",
    "playwright>=1.57.0",
    "psycopg2>=2.9.11",
    "pyrefly>=1.0.0",
    "python-irodsclient>=3.2.0",
    "python-lsp-server>=1.14.0",
    "requests>=2.32.5",
    "tabulate>=0.10.0",
    "toml>=0.10.2",
    "ty>=0.0.14",
]
